fix: minor fixes in html and text alignment

--- a/sass/header.sass
+++ b/sass/header.sass
@@ -1,21 +1,23 @@
 .header
     text-align: center
-    padding-top: 100px
+    padding-top: 6.25rem
+    overflow: hidden
 
     &__cta
         padding-left: 2rem
         padding-right: 2rem
+        margin-bottom: 3.188rem
         &__title
-            font-size: 35px
+            font-size: 2.188rem
             font-weight: 400
             font-family: Raleway
-            margin-bottom: 20px
+            margin-bottom: 1.25rem
         &__text
-            margin-bottom: 28px
+            margin-bottom: 1.75rem
             font-family: "Open Sans"
-            line-height: 23px
+            line-height: 1.438rem
         &__button
-            border-radius: 40px
+            border-radius: 2.5rem
             color: white
             background-color: #08A6E4
             border: 0
@@ -24,6 +26,7 @@
     &__image
         width: 100%
         margin-bottom: 2.5rem
+        transform: scale(2)
 
     &__facts
         padding-left: 2.25rem
@@ -50,8 +53,24 @@
                     transform: translate(-15%, -7.5%)
             &__number
                 letter-spacing: 0.37rem
-                margin-bottom: 1.18em
+                margin-bottom: 1.18rem
                 font-weight: 800
 
             &__text
-                color: #A5A5A5
+                &--1
+                    color: #A5A5A5
+                    font-size: 1.063rem
+                    margin-left: 50%
+                    transform: translateX(-50%)
+                    width: 25.3%
+                &--2
+                    color: #A5A5A5
+                    margin-left: 50%
+                    transform: translateX(-50%)
+                    width: 47%
+                &--3
+                    color: #A5A5A5
+                    font-size: 1.063rem
+                    margin-left: 50%
+                    transform: translateX(-50%)
+                    width: 43.5%
