--- a/sass/main.sass
+++ b/sass/main.sass
@@ -8,9 +8,9 @@
         padding-bottom: 1.875rem
         padding-left: 1.375rem
         padding-right: 1.375rem
-        margin-bottom: 41px
+        margin-bottom: 2.563rem
         &__image-container
-            margin-bottom: 27px
+            margin-bottom: 1.689rem
             position: relative
             &__elipse
                 position: absolute
@@ -19,15 +19,16 @@
                 width: 192px
                 height: 109.93px
                 transform: translate(0%)
+
         
         &__text-container
             text-align: left
             &__title
-                margin-bottom: 60px
-                font-size: 30px
+                margin-bottom: 3.75rem
+                font-size: 1.875rem
                 font-weight: 400
             &__description
-                font-size: 14px
+                font-size: 0.875rem
                 font-family: "Open Sans"
             &__line
                 display: none
@@ -38,9 +39,9 @@
         padding-bottom: 1.875rem
         padding-left: 1.375rem
         padding-right: 1.375rem
-        margin-bottom: 41px
+        margin-bottom: 2.563rem
         &__image-container
-            margin-bottom: 27px
+            margin-bottom: 1.688rem
             position: relative
             &__elipse
                 width: 132px
@@ -56,10 +57,10 @@
             &__title
                 width: 80%
                 margin-bottom: 1.06rem
-                font-size: 30px
+                font-size: 1.875rem
                 font-weight: 400
             &__text
-                font-size: 14px
+                font-size: 0.875rem
             &__line
                 display: none
 
@@ -72,7 +73,7 @@
         padding-right: 1.25rem
         &__title
             width: 87%
-            font-size: 30px
+            font-size: 1.875rem
             font-weight: 400
             margin-bottom: 1.65rem
         &__description
