--- a/sass/nav.sass
+++ b/sass/nav.sass
@@ -8,7 +8,7 @@
     &__logo
         display: inline-block
         color: #08A6E4
-        font-size: 32px
+        font-size: 2rem
         font-family: Raleway
 
     &__menu
