--- a/sass/pricing.sass
+++ b/sass/pricing.sass
@@ -2,7 +2,7 @@
     padding: 3.75rem 2.57rem 3.31rem
     text-align: center
     &__title
-        font-size: 36px
+        font-size: 2.25rem
         font-weight: 400
         margin-bottom: 1rem
 
@@ -11,20 +11,20 @@
             
         &__tier
             position: relative
-            border-radius: 18px
+            border-radius: 1.125rem
             padding-top: 1.57rem 
             padding-bottom: 1.93rem 
             padding-right: 0.63rem
-            margin-bottom: 54px
+            margin-bottom: 3.375rem
             &__left-side
                 width: 50%
                 height: 100%
                 display: inline-block
                 &__name
-                    font-size: 20px
+                    font-size: 1.25rem
                     font-weight: 700
                 &__price
-                    font-size: 46px
+                    font-size: 2.875rem
                     font-family: "Open Sans"
             &__list
                 display: inline-block 
@@ -33,14 +33,14 @@
                 font-family: "Open Sans"
                 font-size: 0.875rem
                 &__item
-                    margin-bottom: 20px
+                    margin-bottom: 1.25rem
             &__button
                 position: absolute
                 display: block
                 color: white
                 padding: 1rem 3.598rem
                 border: 0
-                border-radius: 23px
+                border-radius: 1.438rem
                 left: 50%
                 transform: translateX(-50%)
                 font-family: "Open Sans"
